--- a/src/App.css
+++ b/src/App.css
@@ -32,9 +32,8 @@
   width: 30%;
   margin-top: 20px;
   /* border-radius: 4px; */
-  /* font-size: 18px;
+/* font-size: 18px;
   box-sizing: border-box; */
-  
 
 /* } */
 
@@ -44,9 +43,9 @@
   width: 30%;
   margin-top: 8px;
   /* border-radius: 4px; */
-  /* font-size: 18px;
+/* font-size: 18px;
   box-sizing: border-box;
-} */ 
+} */
 
 /* .sbbntn{
   margin-left: 438px;
@@ -69,13 +68,11 @@
   color: darkgreen;
   } */
 
-
-  /* .sbbntn:hover{
+/* .sbbntn:hover{
     box-shadow: 0 12px 16px 0 rgba(0,0,0,0.24), 0 17px 50px 0 rgba(0,0,0,0.19);
   } */
 
-
-  /* .images{
+/* .images{
     margin-right: 23px;
   }
 
@@ -86,125 +83,230 @@
     margin-left: 10rem !important;
 }  */
 
+/******************************************* <Login.js> **********************************************/
 
-@import url('https://fonts.googleapis.com/css2?family=Roboto&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Roboto&display=swap");
 
-
-*{
+* {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
 }
 
-.Main{
+.Main {
   align-items: center;
   display: flex;
-  justify-content: center;
+ justify-content: center;
+  margin: auto;
+  width: 50%;
+  padding: 10px;
+  margin-top: -35px;
+  height: 100vh;
 }
 
-
-.Main .images img{
-  width: 238pt;
-  height: 65pt;
-  overflow-x: 286pt;
-  overflow-y: 322pt;
-  margin-left: -9%;
+.inputbtn .images img {
+  display: block;
+  margin-left: 102%;
+  margin-right: auto;
+  width: 50%;
 }
 
-.Main .images h3{
+.inputbtn .images h3 {
   width: 430pt;
   height: 20pt;
-  color:rgb(51, 182, 82);
+  color: rgb(51, 182, 82);
   font-size: 17pt;
-  margin-left: -17%;
+  margin-left: 80%;
   overflow-x: 190pt;
   margin-top: 8%;
   overflow-y: 418pt;
   letter-spacing: -0.01pt;
-  align-items: center;
-  font-family: 'Roboto', sans-serif;
+ text-align: center;
+  font-family: "Roboto", sans-serif;
 }
 
-.Main .inputbtn input{
+.inputbtn input {
   width: 350pt;
   height: 49pt;
   border-radius: 4pt;
-  margin-left: -116%;
-  border-color: rgb(0,105,70);
+
+  margin-top: 30px;
+
+  align-items: center;
+  margin-left: 90%;
+  border-color: rgb(0, 105, 70);
   box-sizing: border-box;
   border-width: thin;
   padding-left: 10px;
- 
 }
 
+/* .images{
+  display: block;
+  margin-left: 50%;
+  margin-right: auto;
+  margin-bottom: 50%;
+ 
+} */
 
+.inputbtn{
+  margin-top: 10%;
+  margin-right: 150%;
 
+}
 
-
-.Main .submitbtn button{
+.Main .submitbtn button {
   width: 350pt;
   height: 55pt;
+  margin-left: 90%;
+  margin-top: 3%;
   border-radius: 6pt;
-  color: rgb(255,255,255);
-  background-color: rgb(8,136,38);
+  color: rgb(255, 255, 255);
+  background-color: rgb(8, 136, 38);
   font-size: 23pt;
   letter-spacing: 0.89pt;
   overflow-x: 374pt;
   overflow-y: 643pt;
-  border-color:  rgb(8,136,38);
+  border-color: rgb(8, 136, 38);
   border-width: thin;
 }
 
-.anchortag .anchortg{
-  width: 131pt;
-  height: 18pt;
-  font-family: Roboto-Bold;
-  overflow-x: 330pt;
-  overflow-y: 706pt ;
-  color: rgb(0,105,70);
-  text-decoration: none;
-  margin-left: 44%;
+
+
+.inputbtn .achorTag a{
+font-size: 14pt;
+font-family: Roboto-Bold;
+color: rgb(0, 105, 70);
+text-decoration: none;
+position: absolute;
+left: 44%;
 }
 
-.images{
-  margin-left: 50%;
-  margin-bottom: 15%;
+.inputbtn .achorTag{
+  padding-top: 10px;
 }
 
-.inputbtn{
-  margin-top: 20%;
+/* 
+.images {
+  margin-left: 100%;
+  margin-bottom: 20%;
+} */
+
+/* .inputbtn {
+  margin-top: 50%;
+  align-items: center;
+  justify-content: center;
   margin-left: -140px;
-}
+} */
 
-.submitbtn{
-  
+/* .submitbtn {
   margin-left: -116%;
   margin-top: 12px;
+} */
 
-}
-
-.inputbtn2 .btn2{
+.inputbtn2 .btn2 {
   margin-top: 12px;
 }
-
 
 input::placeholder {
   font-weight: bold;
   font-size: 18px;
 
   color: black;
-  
-  margin-left: 10% !important;
-} 
 
-.sbbntn:hover{
-  box-shadow: 0 12px 16px 0 rgba(0,0,0,0.24), 0 17px 50px 0 rgba(0,0,0,0.19);
+  margin-left: 10% !important;
 }
 
-.anchortg:hover{
-  color: rgb(0,105,70);
+.inputbtn .sbbntn:hover {
+  box-shadow: 0 12px 16px 0 rgba(0, 0, 0, 0.24),
+    0 17px 50px 0 rgba(0, 0, 0, 0.19);
+}
+
+.anchortg:hover {
+  color: rgb(0, 105, 70);
+}
+
+
+
+/* Media Query for Mobile Devices */
+@media (max-width: 480px) {
+ .Main{
+  width: fit-content;
+  height: fit-content;
+  align-items: center;
+  justify-content: center;
+
+ }
+ .inputbtn .images img{
+  display: block;
+    width: 50%;
+    margin-left: 115%;
+
+ }
+.inputbtn .images h3{
+  font-size: 10pt;
+  margin-right: 10%;
+}
+
+
+.inputbtn .images{
+  margin-right: 20%;
+}
+
+.inputbtn input{
+  width: 50%;
+  height: 10vh;
+  margin-right: 10%;
+ 
+
+}
+
+.inputbtn .submitbtn button{
+  width: 50%;
+  height: 10vh;
+  font-size: 15pt;
 }
 
 .anchortag{
-  margin-top: 15px;
+  font-size: 10pt;
+  text-align: center;
+  margin-right: 31%;
+}
+
+}
+/* Media Query for low resolution  Tablets, Ipads */
+@media (min-width: 481px) and (max-width: 767px) {
+  body {
+    background-color: yellow;
+  }
+}
+
+/* Media Query for Tablets Ipads portrait mode */
+@media (min-width: 768px) and (max-width: 1024px) {
+
+.Main{
+  align-items: center;
+  justify-content: center;
+  /* position: absolute;
+  margin-left: 15%; */
+  margin-right: 50%;
+
+}
+
+.Main .achorTag a{
+  margin-left: -27px;
+}
+
+}
+
+/* Media Query for Laptops and Desktops */
+@media (min-width: 1025px) and (max-width: 1280px) {
+  body {
+    background-color: green;
+  }
+}
+/* Media Query for Large screens */
+@media (min-width: 1281px) {
+  body {
+    background-color: white;
+  }
 }
