--- a/src/foreman.css
+++ b/src/foreman.css
@@ -39,17 +39,17 @@
   position: absolute;
   left: 58%;
   margin-left: -540px;
-  top: 15px;
+  top: 24px;
 }
 
 .foreman h3{
   font-size: 14pt;
   color: rgb(0,0,0);
-  width: 372pt;
+  width: 500pt;
   height: 37pt;
   text-align: center;
   margin-top: 1%;
-  margin-right: 45%;
+  margin-right: 40%;
 }
 /***************************************************************<foreman/> ***********************************/
 
@@ -58,7 +58,8 @@
 
 .header span{
   font-size: 14pt;
-    margin-left: 222px;
+  /* margin-left: 123px; */
+  margin-left: 228px;
    
 }
 
@@ -75,7 +76,8 @@
   display: flex;
   align-items: center;
   cursor: pointer;
-  margin-right: 10px;
+  margin-top: -5px;
+  margin-right: 28px;
 }
 
 .Logout i{
@@ -91,8 +93,8 @@
   font-size: 14pt;
   letter-spacing: 0.01pt;
   color: rgb(0,0,0);
-  margin-left: 25px;
-  margin-top: -20px;
+  margin-left: 4px;
+  margin-top: -56px;
 }
 
 
@@ -114,9 +116,9 @@
 
 .CardReference .card_ref .loc{
   
-  padding-left: 80%;
+  padding-left: 79%;
   /* margin-bottom: 1%; */
-  margin-top: -2%;
+  margin-top: 0%;
 
 }
 
@@ -148,7 +150,7 @@
 
 .paragraph{
   display: flex;
-  font-size: 15pt;
+  font-size: 14pt;
   color: rgb(0,0,0);
   font-weight: bold;
   margin-left: 17px;
@@ -179,6 +181,28 @@
   border-collapse: separate;
 }
 
+.datatable .tabular i{
+  margin-left: 87%;
+  margin-top: -9%;
+  width: 30px;
+  height: 30px;
+  background-color: white;
+  color: #00a53e;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  border-radius: 50%;
+  cursor: pointer;
+}
+
+
+.tabular th{
+text-align: left;
+}
+
+.tabular td{
+  text-align: left;
+  }
 
 .dataT{
   background-color: rgb(188,242,204)  ;
@@ -410,3 +434,48 @@
   background-color: rgb(226, 245, 231);
   border-radius: 0.5rem;
 } 
+
+.horizontal_line{
+  border-bottom: 1px solid #00a53e;
+  padding-bottom: 5%;
+  width: 113%;
+  margin-left: -72px;
+
+}
+
+.down_value{
+  width: 447pt;
+  margin-right: 10px;
+  margin-top: 90px;
+  height: 37pt;
+  display: flex;
+  background-color: rgb(226,245,231);
+  border-radius: 6pt;
+}
+
+.down_value p{
+  margin-top: 11px;
+  font-size: 15pt;
+  margin-left: 10px;
+}
+
+.down_values{
+  width: 447pt;
+  margin-right: -16px;
+  margin-top: 35px;
+  height: 37pt;
+  display: flex;
+  background-color: rgb(226,245,231);
+  border-radius: 6pt;
+}
+
+.down_values p {
+  margin-top: 11px;
+  font-size: 15pt;
+  margin-left: 10px;
+}
+
+/****************************************<ForemanTailComponent> *********************************/
+
+
+
