--- a/src/foreman.css
+++ b/src/foreman.css
@@ -444,11 +444,12 @@ text-align: left;
 }
 
 .down_value{
-  width: 447pt;
+  width: 456pt;
   margin-right: 10px;
   margin-top: 90px;
   height: 37pt;
   display: flex;
+   border:1.5px solid rgba(200,200,200,0.5);
   background-color: rgb(226,245,231);
   border-radius: 6pt;
 }
@@ -457,14 +458,16 @@ text-align: left;
   margin-top: 11px;
   font-size: 15pt;
   margin-left: 10px;
+   
 }
 
 .down_values{
-  width: 447pt;
+  width: 456pt;
   margin-right: -16px;
   margin-top: 35px;
   height: 37pt;
   display: flex;
+  border:1.5px solid rgba(200,200,200,0.5);
   background-color: rgb(226,245,231);
   border-radius: 6pt;
 }
