--- a/src/App.css
+++ b/src/App.css
@@ -96,7 +96,7 @@
 .Main {
   align-items: center;
   display: flex;
- justify-content: center;
+  justify-content: center;
   margin: auto;
   margin-left: 29%;
   width: 50%;
@@ -107,7 +107,7 @@
 
 .inputbtn .images img {
   display: block;
-  margin-left: 120%;
+  margin-left: 130%;
   margin-right: auto;
   width: 160%;
 }
@@ -118,7 +118,7 @@
   color: rgb(51, 182, 82);
   font-size: 15pt;
   margin-left: 45%;
- margin-top: 8%;
+  margin-top: 8%;
   letter-spacing: -0.01pt;
   text-align: center;
   font-family: "Roboto", sans-serif;
@@ -147,17 +147,16 @@
  
 } */
 
-.images{
+.images {
   width: 30vh;
   height: 9vh;
   margin-left: 290px;
   margin-bottom: 65px;
 }
 
-.inputbtn{
+.inputbtn {
   margin-top: 10%;
   margin-right: 150%;
-
 }
 
 .Main .submitbtn button {
@@ -176,18 +175,18 @@
   border-width: thin;
 }
 
-
-
-.inputbtn .achorTag a{
+.Main .achorTag a {
   font-size: 14pt;
+  width: 18rem;
   font-family: Roboto-Bold;
   color: rgb(0, 105, 70);
   text-decoration: none;
   position: absolute;
   left: 44.5%;
+
 }
 
-.inputbtn .achorTag{
+.Main .achorTag {
   padding-top: 10px;
 }
 
@@ -217,7 +216,7 @@ input::placeholder {
   font-weight: bold;
   font-size: 18px;
 
-  color: black;
+  color: rgb(0,0,0);
 
   margin-left: 10% !important;
 }
@@ -233,86 +232,188 @@ input::placeholder {
 
 
 
-/* Media Query for Mobile Devices */
-@media (max-width: 480px) {
- .Main{
-  width: fit-content;
-  height: fit-content;
-  align-items: center;
-  justify-content: center;
-
- }
- .inputbtn .images img{
-  display: block;
-    width: 50%;
-    margin-left: 130%;
-
- }
-.inputbtn .images h3{
-  font-size: 10pt;
-  margin-right: 10%;
-}
+/*********************************************** Media Query for login page *****************************/
 
 
-.inputbtn .images{
-  margin-right: 20%;
-}
 
-.inputbtn input{
-  width: 50%;
-  height: 10vh;
-  margin-right: 10%;
- 
-
-}
-
-.inputbtn .submitbtn button{
-  width: 50%;
-  height: 10vh;
-  font-size: 15pt;
-}
-
-.anchortag{
-  font-size: 10pt;
-  text-align: center;
-  margin-right: 31%;
-}
-
-}
-/* Media Query for low resolution  Tablets, Ipads */
-@media (min-width: 481px) and (max-width: 767px) {
-  body {
-    background-color: yellow;
+ @media (max-width: 767px) {
+  .Main{
+    justify-content: center;
+    align-items: center;
+    display: flex;
+    margin-left: 0rem;
+    margin-top: 10rem;
   }
+
+  .Main .inputbtn {
+
+  }
+
+ .inputbtn .images img{
+  width: 30rem;
+  margin-left: 58rem;
+ }
+ .inputbtn .images h3 {
+  font-size: 33px;
+  width: 56rem;
+  margin-left: 46rem;
+ }
+
+ .inputbtn input {
+  width: 45rem;
+  margin-top: 8rem;
+  height: 10vh;
+  margin-left: 70rem;
+  font-size: 10px;
+ }
+
+ .inputbtn input::placeholder {
+  font-size: 30px;
 }
 
-/* Media Query for Tablets Ipads portrait mode */
-@media (min-width: 768px) and (max-width: 1024px) {
+.inputbtn .submitbtn {
+  margin-right: 37.2rem;
+}
 
+.inputbtn .submitbtn button {
+  width: 720px;
+  height: 7rem;
+  margin-top: 20px;
+  font-size: 48px;
+}
+
+
+
+.Main .inputbtn .achorTag a {
+font-size: 30px;
+margin-left: 0px;
+}
+
+}
+
+
+/* @media (max-width:740px) {
+  .Main .inputbtn .achorTag a {
+
+  } */
+/* } */
+
+/* @media (min-width:523px) {
+  .Main{
+    margin-top: 18rem;
+  } */
+
+  /* .Main .inputbtn .achorTag a {
+    padding-left: 8rem;
+    width: 42rem;
+  } */
+/* } */
+
+
+
+/* Media Query for Mobile Devices */
+/* @media (max-width: 480px) {
 .Main{
   align-items: center;
   justify-content: center;
-  /* position: absolute;
-  margin-left: 15%; */
-  margin-right: 50%;
-
+  padding-bottom: 10rem;
+  box-sizing: border-box;
+}
+.inputbtn .images img{
+  width: 10rem;
+  margin-left: -30%;
 }
 
-.Main .achorTag a{
-  margin-left: -27px;
+.inputbtn .images h3{
+  font-size: 12px;
+  margin-left: -117%;
 }
 
+.inputbtn  input{
+  margin-left: 38%;
+  width: 47%;
+  margin-top: -10rem;
+  height: 6vh;
 }
+
+.inputbtn .submitbtn button{
+  width: 48%;
+  font-size: 22px;
+  height: 7vh;
+  margin-left: 12rem;
+}
+
+.inputbtn .achorTag a{
+  width: 26%;
+  margin-left: -110px;
+  font-size: 12px;
+} */
+
+/* } */
+
+/* Media Query for low resolution  Tablets, Ipads */
+/* @media (min-width: 481px) and (max-width: 767px) {
+} */
+
+/* Media Query for Tablets Ipads portrait mode */
+ @media (min-width: 768px) and (max-width: 1024px) {
+  .Main {
+    align-items: center;
+    justify-content: center;
+  }
+
+  .inputbtn .images img {
+    margin-left: 0rem;
+  }
+
+  .inputbtn .images h3 {
+    margin-left: -2rem;
+    font-size: 27px;
+  }
+
+  .inputbtn input {
+    margin-left: 16rem;
+    width: 100%;
+    height: 5rem;
+
+    margin-top: 5rem;
+  }
+
+  .inputbtn {
+    margin-left: 32%;
+  }
+  .inputbtn .submitbtn {
+    margin-right: 38%;
+  }
+
+  .inputbtn .submitbtn button {
+    margin-left: 16rem;
+    width: 161%;
+    font-size: 30pt;
+    height: 6rem;
+  }
+
+  .inputbtn .achorTag a {
+    font-size: 20pt;
+     margin: -10px; 
+     margin-left: -55px;
+  }
+
+  input::placeholder {
+    font-size: 30px;
+  }
+} 
 
 /* Media Query for Laptops and Desktops */
-@media (min-width: 1025px) and (max-width: 1280px) {
+/* @media (min-width: 1025px) and (max-width: 1280px) {
   body {
     background-color: green;
   }
-}
-/* Media Query for Large screens */
-@media (min-width: 1281px) {
+} */
+/* Media Query for La
+rge screens */
+/* @media (min-width: 1281px) {
   body {
     background-color: white;
   }
-}
+} */
