--- a/src/Components/Manager/Manager.css
+++ b/src/Components/Manager/Manager.css
@@ -104,3 +104,12 @@
     background-color: white;
   }
 } */
+
+
+/************************************************* Media query For Mobiles **************************/
+
+
+ /* Media Query for Mobile Devices */
+ @media (max-width: 480px) {
+
+ }
