--- a/src/App.css
+++ b/src/App.css
@@ -267,6 +267,15 @@ input::placeholder {
   font-size: 10px;
  }
 
+ .inputbtn input[type=email] {
+font-size: 30px;
+ }
+
+
+ .inputbtn input[type=password] {
+  font-size: 30px;
+   }
+
  .inputbtn input::placeholder {
   font-size: 30px;
 }
@@ -312,97 +321,171 @@ margin-left: 0px;
 
 
 /* Media Query for Mobile Devices */
-/* @media (max-width: 480px) {
-.Main{
+ @media (max-width: 480px) {
+.Main {
   align-items: center;
   justify-content: center;
-  padding-bottom: 10rem;
-  box-sizing: border-box;
-}
-.inputbtn .images img{
-  width: 10rem;
-  margin-left: -30%;
+  display: flex;
+  margin-left: 14rem;
+
+
 }
 
-.inputbtn .images h3{
-  font-size: 12px;
-  margin-left: -117%;
+
+
+.inputbtn .images img {
+  width: 18rem;
+  margin-left: 31rem;
+} 
+
+.inputbtn .images h3 {
+  margin-left: 13rem;
+  font-size: 20px;
 }
 
-.inputbtn  input{
-  margin-left: 38%;
-  width: 47%;
-  margin-top: -10rem;
-  height: 6vh;
+ .Main .inputbtn input {
+  margin-left: 45.5rem;
+  width: 27rem;
+  margin-top: 1rem;
+
 }
 
-.inputbtn .submitbtn button{
-  width: 48%;
-  font-size: 22px;
-  height: 7vh;
-  margin-left: 12rem;
+.Main .inputbtn .submitbtn button {
+  width: 27rem;
+  margin-left: 45.5rem;
 }
 
-.inputbtn .achorTag a{
-  width: 26%;
-  margin-left: -110px;
-  font-size: 12px;
-} */
+.inputbtn .achorTag  {
 
-/* } */
+}
+
+ } 
 
 /* Media Query for low resolution  Tablets, Ipads */
-/* @media (min-width: 481px) and (max-width: 767px) {
-} */
+
+
+
+@media (min-width: 481px) and (max-width: 767px) {
+  .Main {
+    align-items: center;
+    justify-content: center;
+    display: flex;
+  }
+}
+
+
+
 
 /* Media Query for Tablets Ipads portrait mode */
  @media (min-width: 768px) and (max-width: 1024px) {
   .Main {
     align-items: center;
     justify-content: center;
+    display: flex;
+    margin-left: 23rem;
+  
   }
 
-  .inputbtn .images img {
-    margin-left: 0rem;
+.Main .inputbtn .images img {
+  margin-left: 22rem;
+}
+
+.Main .inputbtn .images h3 {
+  font-size: 27px;
+  margin-left: 15.5rem;
+}
+
+.inputbtn input {
+  margin-left: 32rem;
+  height: 11vh;
+  margin-top: 5rem;
+  width: 40rem;
+}
+
+.inputbtn .submitbtn button {
+  margin-left: 32rem;
+  height: 11vh;
+  margin-top: 5rem;
+  width: 40rem;
+ margin-top: 1rem;
+ 
+}
+.inputbtn input::placeholder {
+  font-size: 25px;
+}
+
+.inputbtn input[type=email] {
+  font-size: 25px;
+}
+
+.inputbtn input[type=password] {
+  font-size: 25px;
+}
+
+.inputbtn .achorTag a {
+  font-size: 25px;
+  margin-left: -4rem;
+}
+
+}
+
+
+
+
+/******************************** Media Query For Ipad Potraits ********************/
+
+
+
+@media (min-width: 1025px) and (max-width:1180px) {
+  .Main{
+    align-items: center;
+    justify-content: center;
+    display: flex;
+
+  }
+
+ .inputbtn .images img {
+  margin-left: 34rem;
   }
 
   .inputbtn .images h3 {
-    margin-left: -2rem;
+    margin-left: 29rem;
     font-size: 27px;
   }
 
   .inputbtn input {
-    margin-left: 16rem;
-    width: 100%;
-    height: 5rem;
-
+    margin-left: 45rem;
+    height: 11vh;
+    width: 40rem;
     margin-top: 5rem;
   }
 
-  .inputbtn {
-    margin-left: 32%;
-  }
-  .inputbtn .submitbtn {
-    margin-right: 38%;
+  .inputbtn .submitbtn button {
+    margin-left: 45rem;
+    height: 12vh;
+    font-size: 40px;
+    width: 40rem;
+    margin-top: 1rem;
   }
 
-  .inputbtn .submitbtn button {
-    margin-left: 16rem;
-    width: 161%;
-    font-size: 30pt;
-    height: 6rem;
+  .inputbtn input[type=email] {
+    font-size: 28px;
+  }
+
+  .inputbtn input[type=password] {
+    font-size: 28px;
+  }
+
+  .inputbtn input::placeholder {
+    font-size: 25px;
   }
 
   .inputbtn .achorTag a {
-    font-size: 20pt;
-     margin: -10px; 
-     margin-left: -55px;
+    font-size: 25px;
+    margin-left: -4rem;
   }
 
-  input::placeholder {
-    font-size: 30px;
-  }
-} 
+}
 
 /* Media Query for Laptops and Desktops */
 /* @media (min-width: 1025px) and (max-width: 1280px) {
