--- a/src/Technician.css
+++ b/src/Technician.css
@@ -23,7 +23,7 @@
 .foreman_class h3{
     font-size: 14pt;
     margin-left: 17%;
-    margin-top: -45px;
+    margin-top: -50px;
     width: 375pt;
     height: 37pt;
     margin-bottom: 0px;
@@ -56,6 +56,7 @@
 .Logout_class .head2{
     font-size: 14pt;
     width: 44pt;
+    cursor: pointer;
     height: 16pt;
     margin-left: 30px;
     margin-top: -23px;
@@ -82,6 +83,7 @@
 
 .Logout_class .Logout_logo img{
 width: 16pt;
+cursor: pointer;
 height: 18.5pt;
 margin-top: 10px;
 }
@@ -108,6 +110,10 @@ margin-top: 10px;
    
 }
 
+.col_tabclass th {
+    text-align: left;
+}
+
 .new_jordcard th tr td{
     text-align: left;
 }
@@ -129,5 +135,86 @@ margin-top: 10px;
 }
 
 
-/********************************************************  ForemanView ***********************************************/
+/********************************************************  <Technician.js> ***********************************************/
 
+.Page_two_logoAndLogOut_out {
+    display: flex;
+    justify-content: space-between;
+    padding: 5px 10px;
+    align-items: center;
+}
+
+.Page_two_logoAndLogOut_out img {
+    width: 133.3pt;
+    margin-left: 1rem;
+    height: 38pt;
+}
+
+.Page_two_logoAndLogOut_out h3 {
+
+    font-size: 14pt;
+    color: rgb(0, 0, 0);
+    width: 500pt;
+    height: 37pt;
+    text-align: center;
+    margin-top: 1%;
+    margin-right: 40%;
+}
+
+
+.header-text span {
+    margin-left: 203px;
+}
+
+.LogOut_out  {
+    margin-top: -6rem;
+    margin-right: 1rem;
+}
+
+.LogOut_out i {
+
+    display: flex;
+    justify-content: end;
+    
+}
+
+
+
+.LogOut_out img {
+
+    height: 18pt;
+    width: 18pt;
+    cursor: pointer;
+    margin-top: 1rem;
+    margin-right: 4rem;
+}
+
+.head_er {
+    cursor: pointer;
+    padding-left: 75.5rem;
+    font-size: 19px;
+    margin-top: -1.5rem;
+}
+
+
+.CardReference_ref {
+    margin-top: 65px;
+    margin-left: 17px;
+}
+
+
+.CardReference_ref .card_ref_ref {
+    font-size: 15pt;
+    color: rgb(0,0,0);
+    border-bottom: 1px solid #00a53e;
+    padding-bottom: 5px;
+    margin: 20px 0px;
+}
+
+
+.locAt_tion {
+    position: relative;
+    bottom: 25px;
+    font-size: 20px;
+    margin: -3px;
+}
